--- a/src/app/pages/tool-request/_components/maintenance-reparation/maintenance-reparation.page.html
+++ b/src/app/pages/tool-request/_components/maintenance-reparation/maintenance-reparation.page.html
@@ -12,7 +12,7 @@
         <ion-card-header>
           <ion-card-title class="ion-text-uppercase">L'outillage</ion-card-title>
         </ion-card-header>
-        <app-tool-input (evOnToolChange)="toolRequest.maintenance.OT = $event" [tool]="toolRequest?.maintenance?.OT">
+        <app-tool-input formControlName="outillage">
         </app-tool-input>
       </ion-card>
       <ion-card color="light">
