--- a/src/app/pages/molding/create-molding/create-molding.page.html
+++ b/src/app/pages/molding/create-molding/create-molding.page.html
@@ -50,7 +50,8 @@
       </ion-list>
     </mat-expansion-panel>
 
-    <mat-expansion-panel *ngIf="molding.material?.length >0" [expanded]="(molding.material.length >0)">
+    <mat-expansion-panel *ngIf="molding.materialSupplementary?.length >0"
+      [expanded]="(molding.materialSupplementary.length >0)">
       <mat-expansion-panel-header>
         <mat-panel-title>
           <ion-title color=primary>Liste des nidas</ion-title>
@@ -72,15 +73,15 @@
             </ion-label>
           </ion-col>
         </ion-row>
-        <ion-row *ngFor="let core of molding.material">
+        <ion-row *ngFor="let core of molding.materialSupplementary">
           <ion-col size="6">
             <ion-label>
-              {{core.batchNumber}}
+              {{core.numLot}}
             </ion-label>
           </ion-col>
           <ion-col size="6">
             <ion-label>
-              {{core.reference}}
+              {{core.ref}}
             </ion-label>
           </ion-col>
         </ion-row>
@@ -89,7 +90,7 @@
   </mat-accordion>
 </ion-content>
 <!-- footer -->
-<ion-tab-bar slot="bottom" class="ion-hide-md-up">
+<!-- <ion-tab-bar slot="bottom" class="ion-hide-md-up">
   <ion-tab-button tab="schedule">
     <ion-icon name="link"></ion-icon>
     <ion-label>Outillage</ion-label>
@@ -110,7 +111,7 @@
     <ion-icon name="save"></ion-icon>
     <ion-label>Sauvegarder</ion-label>
   </ion-tab-button>
-</ion-tab-bar>
+</ion-tab-bar> -->
 <ion-footer class="ion-hide-md-down">
   <ion-toolbar class="ion-space-between">
     <ion-item lines="none">
