--- a/src/app/pages/tool-request/_components/control3-d/control.page.html
+++ b/src/app/pages/tool-request/_components/control3-d/control.page.html
@@ -6,12 +6,29 @@
 <ion-content [fullscreen]="false" color=light>
   <div class="content-container">
     <div class="control-form">
+
+      <!-- ******************************* -->
+      <!-- **********   FORM   *********** -->
+      <!-- ******************************* -->
+
       <form class="main-form" [formGroup]="controlForm" (ngSubmit)="submitControlForm()">
+
+        <!-- ******************************* -->
+        <!-- *******   L'OUTILLAGE   ******* -->
+        <!-- ******************************* -->
+
+
         <ion-card color=light padding>
           <ion-card-header>
             <ion-card-title class="ion-text-uppercase">L'outillage</ion-card-title>
           </ion-card-header>
-          <app-tool-input (evOnToolChange)="toolRequest.controle.OT= $event" [tool]="toolRequest.controle.OT">
+
+          <!-- ******************************* -->
+          <!-- **********   TOOL   *********** -->
+          <!-- ******************************* -->
+
+
+          <app-tool-input formControlName="outillage">
           </app-tool-input>
           <!-- <ion-item>
                             <ion-label>Outillage SAP :</ion-label>
@@ -19,139 +36,230 @@
                             <ion-spinner *ngIf="toolIsLoading" name="bubbles"></ion-spinner>
                             <ion-icon *ngIf="this.toolRequest.controle.outillage" slot="end" name="checkmark" color=success></ion-icon>
                         </ion-item> -->
-          <!-- Datetime in overlay -->
+
+
+
+          <!-- ******************************* -->
+          <!-- ****   DATE MISE A DISPO   **** -->
+          <!-- ******************************* -->
           <ion-item button id="open-modal">
             <ion-label>Date de mise à disposition au service outillage</ion-label>
-            <ion-text slot="end" *ngIf="toolRequest?.controle?.dispoOut">
-              {{toolRequest?.controle?.dispoOut | date:"dd/MM/yyyy "}}</ion-text>
+            <ion-text slot="end">
+              {{controlForm.value.dispoTool | date:"dd/MM/yyyy"}}</ion-text>
+
             <ion-icon slot=end icon="calendar-outline"></ion-icon>
             <ion-modal trigger="open-modal">
               <ng-template>
                 <ion-content>
                   <ion-datetime #dispoTool presentation="date" formControlName="dispoTool"
                     display-format="EEEE DD.MMMM.YYYY"
-                    (ionChange)="toolRequest.controle.dispoOut= dateValue(dispoTool.value)">
+                    (ionChange)="controlForm.value.dispoOut= dateValue(dispoTool.value)">
                     <div slot="title">Date de mise à disposition au service outillage</div>
                   </ion-datetime>
                 </ion-content>
               </ng-template>
             </ion-modal>
           </ion-item>
+
+
+          <!-- ******************************* -->
+          <!-- ********   LA PIECE   ********* -->
+          <!-- ******************************* -->
           <div class="flex-row">
+
+            <!-- ******************************* -->
+            <!-- ********   reference   ******** -->
+            <!-- ******************************* -->
+
+
             <ion-item>
               <ion-label>Référence
                 <ion-text color="danger">*</ion-text>
               </ion-label>
-              <ion-input required #refPlan formControlName="refPlan" type="text" placeholder="indiquer n° de plan"
-                (ionChange)="toolRequest.controle.refPlan = refPlan.value.toString()"></ion-input>
+              <ion-input required #refPlan formControlName="refPlan" type="text" placeholder="indiquer n° de plan">
+              </ion-input>
             </ion-item>
+
+            <!-- ******************************* -->
+            <!-- ********   INDICE   *********** -->
+            <!-- ******************************* -->
+
+
             <ion-item>
               <ion-label>Indice plan
                 <ion-text color="danger">*</ion-text>
               </ion-label>
               <ion-input required #indPlan formControlName="indPlan" type="text"
-                placeholder="indiquer l 'indice du plan"
-                (ionChange)="toolRequest.controle.indPlan = indPlan.value.toString()"></ion-input>
+                placeholder="indiquer l 'indice du plan"></ion-input>
             </ion-item>
           </div>
+
+
+          <!-- ******************************* -->
+          <!-- *******   CHEMIN CAO   ******** -->
+          <!-- ******************************* -->
+
+
           <ion-item>
             <ion-label>Format du modèle 3D fourni si nécessaire
               <!-- <ion-text color="danger">*</ion-text> -->
             </ion-label>
-            <ion-input #caoPath formControlName="caoPath" type="text" placeholder="Fournir CAO et / ou chemin d’accès"
-              (ionChange)="toolRequest.controle.cheminCAO = caoPath.value.toString()"></ion-input>
+            <ion-input #caoPath formControlName="caoPath" type="text" placeholder="Fournir CAO et / ou chemin d’accès">
+            </ion-input>
 
           </ion-item>
         </ion-card>
+
+
+        <!-- ******************************* -->
+        <!-- ******   LE CONTROLE   ******** -->
+        <!-- ******************************* -->
+
+
         <ion-card>
           <ion-card-header color=light>
             <ion-card-title class="ion-text-uppercase">Le contrôle</ion-card-title>
           </ion-card-header>
 
+          <!-- ******************************* -->
+          <!-- ******   DESCRIPTION   ******** -->
+          <!-- ******************************* -->
+
+
           <ion-item fill="outline" lines=none>
             <ion-label>But du contrôle, de l'essai ou de l 'expertise
               <ion-text color="danger">*</ion-text>
             </ion-label>
-            <editor slot="" formControlName="ctrlReasons" [init]="{
+            <!-- base_url: '/tinymce',
+                      suffix: '.min', -->
+            <editor #ctrlReasons slot="" formControlName="ctrlReasons" [init]="{
                       plugins: 'lists link image table wordcount',
-                      base_url: 'tinymce',
-                      suffix: '.min',
                       menubar: false,
-                      statusbar:false
-                    }" required #ctrlReasons (ionChange)="test()"></editor>
+
+                      statusbar:false,
+                      object_resizing: true,
+                      placeholder:'Descriptif de la mesure demandée (contrôle réception, suite à choc, déménagement d’outillage ou autre)'
+                    }"></editor>
             <!-- <ion-textarea autoGrow required #ctrlReasons formControlName=" ctrlReasons " type="text " (ionChange)="test() "></ion-textarea> -->
-            <!-- <ion-note>Descriptif de la mesure demandée (contrôle réception, suite à choc, déménagement d’outillage ou autre)</ion-note> -->
+            <!-- <ion-note></ion-note> -->
           </ion-item>
+
+
+          <!-- ******************************* -->
+          <!-- *********   DETAIL   ********** -->
+          <!-- ******************************* -->
+
+
           <ion-item>
             <ion-label>Détails de la mesure
               <ion-text color="danger">*</ion-text>
             </ion-label>
-            <ion-textarea autoGrow required #ctrlDetails formControlName="ctrlDetails" type="text"
-              placeholder="lieux, référentiel..."
-              (ionChange)="toolRequest.controle.detailsControle=ctrlDetails.value.toString()"></ion-textarea>
+            <editor #ctrlReasons slot="" formControlName="ctrlDetails" [init]="{
+              plugins: 'lists link image table wordcount',
+              menubar: false,
+              statusbar:false,
+              placeholder:'lieux, référentiel...'
+            }"></editor>
+            <!-- <ion-textarea autoGrow required #ctrlDetails formControlName="ctrlDetails" type="text"
+              placeholder="lieux, référentiel..."></ion-textarea> -->
           </ion-item>
+
+          <!-- ******************************* -->
+          <!-- **  PRECISION / TOLERANCES   ** -->
+          <!-- ******************************* -->
+
+
           <ion-item>
             <ion-label>Précision demandée et attendue
               <ion-text color="danger">*</ion-text>
             </ion-label>
-            <ion-textarea autoGrow required #tolerance formControlName="precisionTolerances" type="text"
-              placeholder="IT plans et spécifications de définition"
-              (ionChange)="toolRequest.controle.tolerances=tolerance.value.toString()"></ion-textarea>
+            <editor #ctrlReasons slot="" formControlName="precisionTolerances" [init]="{
+              plugins: 'lists link image table wordcount',
+              menubar: false,
+              statusbar:false,
+              placeholder:'IT plans et spécifications de définition'
+            }"></editor>
+            <!-- <ion-textarea autoGrow required #tolerance formControlName="precisionTolerances" type="text"
+              placeholder="IT plans et spécifications de définition"></ion-textarea> -->
           </ion-item>
-        </ion-card>
-        <ion-card>
-          <!-- Datetime in overlay -->
+
+
+          <!-- ******************************* -->
+          <!-- *******   DATE BUTOIR   ******* -->
+          <!-- ******************************* -->
+
+
           <ion-item button id="open-date-butoir">
             <ion-label>Date butoir demandée</ion-label>
             <ion-icon slot=end icon="calendar-outline"></ion-icon>
             <ion-text slot="end">
-              {{toolRequest.controle.dateBesoin | date:"dd/MM/yyyy"}}</ion-text>
-            <!-- <ion-button id="open-modal ">Open Datetime Modal</ion-button> -->
-            <ion-modal trigger="open-date-butoir ">
+              {{controlForm.value.dateBesoin | date:"dd/MM/yyyy"}}</ion-text>
+            <!-- <ion-button id="open-modal">Open Datetime Modal</ion-button> -->
+            <ion-modal trigger="open-date-butoir">
               <ng-template>
                 <ion-content>
-                  <ion-datetime #needDate presentation="date" formControlName="needDate" display-format="DD.MM.YYYY"
-                    (ngModelChange)="toolRequest.controle.dateBesoin=dateValue(needDate.value)">
+                  <ion-datetime #needDate presentation="date" formControlName="dateBesoin"
+                    display-format="EEEE DD.MMMM.YYYY">
                     <div slot="title">Date butoir demandée</div>
                   </ion-datetime>
                 </ion-content>
               </ng-template>
             </ion-modal>
           </ion-item>
+
+
+          <!-- ******************************* -->
+          <!-- *********   OI eOTP   ********* -->
+          <!-- ******************************* -->
+
+
           <ion-item>
             <ion-label>Oi ou Eotp
               <ion-text color="danger">*</ion-text>
             </ion-label>
             <ion-input #ligneBudgetaire required formControlName="ligneBudgetaire" type="text"
-              placeholder="Indiquez le n° pour imputation"
-              (ionChange)="toolRequest.controle.ligneBudgetaire=ligneBudgetaire.value.toString()"></ion-input>
+              placeholder="Indiquez le n° pour imputation"></ion-input>
           </ion-item>
+
+          <!-- ******************************* -->
+          <!-- ******   TYPE RAPPORT   ******* -->
+          <!-- ******************************* -->
+
+
           <ion-item>
             <ion-label>Types de rapport</ion-label>
-            <ion-select required #typeRapportSelect formControlName="typeRapport"
-              (change)="toolRequest.controle.typeRapport=typeRapportSelect.value">
+            <ion-select required #typeRapportSelect formControlName="typeRapport">
               <ion-select-option *ngFor="let type of typeRapport| keyvalue" [value]="type.value">{{type.value}}
               </ion-select-option>
             </ion-select>
           </ion-item>
         </ion-card>
+
+        <!-- *********************************************************************************************** -->
+        <!-- *********************************************************************************************** -->
+        <!-- ******************************* -->
+        <!-- *******   LA MESURE   ********* -->
+        <!-- ******************************* -->
+
         <ion-card *ngIf="canManage">
           <ion-card-header color=light>
             <ion-card-title class="ion-text-uppercase">La Mesure</ion-card-title>
           </ion-card-header>
+
+
           <!-- Datetime in overlay -->
           <ion-item button id="open-date-interv">
             <ion-label>Date d'intervention</ion-label>
             <ion-icon slot=end icon="calendar-outline"></ion-icon>
-            <ion-text slot="end " *ngIf="toolRequest?.controle?.interventionDate">
-              {{toolRequest?.controle?.interventionDate | date:"dd/MM/yyyy"}}</ion-text>
+            <!-- TODO intervention -->
+            <!-- <ion-text slot="end " *ngIf="toolRequest?.controle?.interventionDate">
+              {{toolRequest?.controle?.interventionDate | date:"dd/MM/yyyy"}}</ion-text> -->
             <!-- <ion-button id="open-modal ">Open Datetime Modal</ion-button> -->
-            <ion-modal trigger="open-date-interv">
+            <ion-modal trigger="open-date-interv ">
               <ng-template>
                 <ion-content>
                   <ion-datetime #interventionDate presentation="date" formControlName="interventionDate"
-                    display-format="DD.MM.YYYY"
-                    (ionChange)="toolRequest.controle.interventionDate=dateValue(interventionDate.value)">
+                    display-format="EEEE DD.MMMM.YYYY">
                     <div slot="title">Date d'intervention</div>
                   </ion-datetime>
                 </ion-content>
@@ -161,15 +269,13 @@
           <ion-item>
             <ion-label>Informations complémentaires
             </ion-label>
-            <ion-input #infosComplementaire
-              (ionChange)="toolRequest.controle.infosComplementaire=infosComplementaire.value.toString()"
-              formControlName="infosComplementaire" type="text" placeholder="Information complémentaire"></ion-input>
+            <ion-input #infosComplementaire formControlName="infosComplementaire" type="text"
+              placeholder="Information complémentaire"></ion-input>
           </ion-item>
 
           <ion-item>
             <ion-label>Moyen de mesure</ion-label>
-            <ion-select #moyenMesureSelect formControlName="moyenMesure"
-              (ionChange)="toolRequest.controle.moyenMesure=moyenMesureSelect.value">
+            <ion-select #moyenMesureSelect formControlName="moyenMesure">
               <ion-select-option *ngFor="let moyen of moyenMesure | keyvalue" [value]="moyen.value">{{moyen.value}}
               </ion-select-option>
             </ion-select>
@@ -178,7 +284,7 @@
       </form>
     </div>
     <div class="print-preview">
-      <app-controleddd [toolRequest]="toolRequest"></app-controleddd>
+      <!-- <app-controleddd [toolRequest]="toolRequest"></app-controleddd> -->
     </div>
   </div>
 </ion-content>
