--- a/src/app/pages/tool-request/_components/controle3d/controleddd.component.html
+++ b/src/app/pages/tool-request/_components/controle3d/controleddd.component.html
@@ -32,7 +32,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="12">Demandeur : {{toolRequest?.controle.demandeur.username}}</ion-col>
+      <ion-col size="12">Demandeur : {{toolRequest?.controle.demandeur[0].username}}</ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="6">N° outillage : OT0{{toolRequest?.controle?.OT?.sapToolNumber}}</ion-col>
