--- a/src/app/pages/tool-request/_components/tool-requests/tool-requests.page.html
+++ b/src/app/pages/tool-request/_components/tool-requests/tool-requests.page.html
@@ -37,8 +37,13 @@
 </ion-header>
 <ion-content>
   <div class="table ion-justify-content-center ion-align-items-center">
+
     <table mat-table #table [dataSource]="tableRequestsDataSource" class="mat-elevation-z8" fixedLayout=true matSort
       matSortActive="needDate">
+
+      <!-- ********* ****** ********* -->
+      <!-- ********* STATUT ********* -->
+      <!-- ********* ****** ********* -->
       <ng-container matColumnDef="statut">
         <th mat-header-cell *matHeaderCellDef>
           Statut
@@ -46,6 +51,11 @@
         <td [style.border-left]="getBorder(request)" mat-cell *matCellDef="let request">
           {{ request.statut }}</td>
       </ng-container>
+
+
+      <!-- ********* ****** ********* -->
+      <!-- ********* Numéro DEMANDE ********* -->
+      <!-- ********* ****** ********* -->
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>
           Numéro
@@ -55,27 +65,38 @@
         </td>
       </ng-container>
 
+      <!-- ********* ****** ********* -->
+      <!-- ********* OUTILLAGE ********* -->
+      <!-- ********* ****** ********* -->
       <ng-container matColumnDef="tool">
         <th mat-header-cell *matHeaderCellDef>
           Outillage
         </th>
         <td mat-cell *matCellDef="let request">
-          <ion-label *ngIf="request.controle">OT{{request.controle.OT.sapToolNumber}} -
-            {{request.controle.OT.designation}}</ion-label>
-          <ion-label *ngIf="request.maintenance">OT{{request.maintenance.OT.sapToolNumber}} -
-            {{request.maintenance.OT.designation}}</ion-label>
+          <ion-label *ngIf="request.controle">OT{{request.controle.outillage.sapToolNumber}} -
+            {{request.controle.outillage.designation}}</ion-label>
+          <ion-label *ngIf="request.maintenance">OT{{request.maintenance.outillage.sapToolNumber}} -
+            {{request.maintenance.outillage.designation}}</ion-label>
         </td>
       </ng-container>
 
+
+      <!-- ********* ******** ******** -->
+      <!-- **** DATE DE CRETATION **** -->
+      <!-- ********* ******* ********* -->
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Date demande
         </th>
-        <td mat-cell *matCellDef="let element">
-          {{element.createdAt | date :"EE dd MMM yyyy":"local" }}
+        <td mat-cell *matCellDef="let request">
+          {{request.createdAt | date :"EE dd MMM yyyy":"local" }}
         </td>
       </ng-container>
 
+
+      <!-- ********* ****** ********* -->
+      <!-- ********* DEMANDEUR ********* -->
+      <!-- ********* ****** ********* -->
       <ng-container matColumnDef="userCreat">
         <th mat-header-cell *matHeaderCellDef>
           Demandeur
@@ -85,6 +106,7 @@
           <ion-label *ngIf="request.maintenance">{{request.maintenance.demandeur.username}}</ion-label>
         </td>
       </ng-container>
+      <!-- TODO a supprimer -->
       <!-- <ng-container matColumnDef="groupAffectation">
                 <th mat-header-cell *matHeaderCellDef>
                     Affectation
@@ -94,6 +116,10 @@
                 </td>
             </ng-container> -->
 
+
+      <!-- ********* ****** ********* -->
+      <!-- ********* DATE BESOIN ********* -->
+      <!-- ********* ****** ********* -->
       <ng-container matColumnDef="needDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Date Besoin
@@ -104,26 +130,31 @@
           </ion-label>
         </td>
       </ng-container>
+
+
+      <!-- ********* ****** ********* -->
+      <!-- ********* BOUTONS ********* -->
+      <!-- ********* ****** ********* -->
       <ng-container matColumnDef="buttons">
         <th mat-header-cell *matHeaderCellDef>
 
         </th>
-        <td mat-cell *matCellDef="let element">
-          <ion-button size=small *ngIf="element.controle" (click)="openControlClick(element)">
+        <td mat-cell *matCellDef="let request">
+          <ion-button size=small *ngIf="request.controle" (click)="openControlClick(request)">
             Ouvrir
           </ion-button>
-          <ion-button size=small *ngIf="element.maintenance" (click)="openMaintenanceClick(element)">
+          <ion-button size=small *ngIf="request.maintenance" (click)="openMaintenanceClick(request)">
             Ouvrir
           </ion-button>
-          <ion-button size=small *ngIf="isAdmin" (click)="removeRequestClick(element)">
+          <ion-button size=small *ngIf="isAdmin" (click)="removeRequestClick(request)">
             <ion-icon slot="end" name="trash-outline"></ion-icon>
             Delete
           </ion-button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedRequestColumns ;sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedRequestColumns"
-        [@openClose]=" (row.statut==='EN COURS DE REALISATION') ? 'open' : ''"></tr>
+      <tr mat-row *matRowDef="let request; columns: displayedRequestColumns"
+        [@openClose]=" (request.statut==='EN COURS DE REALISATION') ? 'open' : ''"></tr>
     </table>
   </div>
 </ion-content>
