message d'erreur dans molding

--- a/src/app/pages/tool-request/_components/control3-d/control.page.html
+++ b/src/app/pages/tool-request/_components/control3-d/control.page.html
@@ -191,6 +191,7 @@
                       suffix: '.min', -->
               <editor #ctrlReasons slot="" formControlName="description" [init]="{
                       plugins: 'lists link image table wordcount',
+                      toolbar:'bold italic underline strikethrough forecolor fontsize styles | alignleft aligncenter alignright alignjustify | bullist numlist | h1 h2 h3 |',
                       menubar: false,
                       statusbar:false,
                       object_resizing: true,
