--- a/src/app/pages/tool-request/_components/control3-d/control.page.scss
+++ b/src/app/pages/tool-request/_components/control3-d/control.page.scss
@@ -1,7 +1,7 @@
 .content-container {
   display: flex;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   width: 100%;
 }
 .control-form {
@@ -19,9 +19,8 @@
     max-width: 30%;
   }
   > * {
-    max-width: 100%;
-    max-height: 100%;
-    overflow: auto;
+    width: auto;
+    height: auto;
   }
 }
 
