--- a/src/app/composants/shared-user-header/shared-user-header.component.html
+++ b/src/app/composants/shared-user-header/shared-user-header.component.html
@@ -18,17 +18,15 @@
     <!-- right side -->
 
     <ion-label slot=end class="dev">{{envMode}}</ion-label>
-    <ion-chip id="button-profil" color=light slot=end class=ion-margin-end outline
-      (click)="isPopoverOpen=!isPopoverOpen">
+    <ion-chip id="button-profil" color=light slot=end class=ion-margin-end outline>
       <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label color=light>{{user?.username}}</ion-label>
     </ion-chip>
-    <ion-popover slot=end [isOpen]="isPopoverOpen" trigger="button-profil" alignment="end" side="bottom">
+    <ion-popover slot=end trigger="button-profil" alignment="end" side="bottom" dismissOnSelect="true">
       <ng-template>
         <ion-content>
           <ion-list>
-            <ion-item button id="trigger-button"
-              (click)="isUserOpen = true; isPopoverOpen = !isPopoverOpen; log(isUserOpen)">
+            <ion-item button id="trigger-button" (click)="isUserOpen = true">
               <ion-label>Profil</ion-label>
             </ion-item>
             <ion-item>
