ajoute date de création dans la fiche user
Signed-off-by: Joris-G <66126635+Joris-G@users.noreply.github.com>

--- a/src/app/composants/user-sheet/user-sheet.component.html
+++ b/src/app/composants/user-sheet/user-sheet.component.html
@@ -31,6 +31,11 @@
         <ion-label>Téléphone</ion-label>
         <ion-input type="text" [value]="user.tel"></ion-input>
       </ion-item>
+      <ion-item>
+        <ion-label>Date de création</ion-label>
+        <ion-input disabled="true" type="text" [value]="user.createdAt | date"></ion-input>
+        <ion-icon slot="end" name="lock-closed-outline"></ion-icon>
+      </ion-item>
     </ion-content>
 
     <ion-footer>
