--- a/src/app/pages/molding/create-molding/create-molding.page.scss
+++ b/src/app/pages/molding/create-molding/create-molding.page.scss
@@ -2,3 +2,12 @@
   padding-right: 10px;
   padding-left: 10px;
 }
+ion-toolbar {
+  > * {
+    padding-inline: 10px;
+  }
+  .col {
+    display: flex;
+    flex-direction: column;
+  }
+}
