--- a/src/app/pages/molding/_components/non-expired-material-input/nida/nida.component.html
+++ b/src/app/pages/molding/_components/non-expired-material-input/nida/nida.component.html
@@ -2,23 +2,26 @@
   <h2>Référence</h2>
   <p>Sélectionner la référence qui correspond</p>
 </div>
-<!-- (change)="material.reference = radioGroup.value" -->
-<ion-radio-group #radioGroup [(ngModel)]="material.reference">
-  <ion-item>
-    <ion-label>Autre :</ion-label>
-    <!-- <ion-radio slot="start"></ion-radio> -->
-    <ion-input #manualInput type="text" placeholder="entrée la référence du nida" [(ngModel)]="material.reference">
-    </ion-input>
-  </ion-item>
-  <ion-item *ngFor="let reference of references$ | async">
-    <ion-label>{{reference}}</ion-label>
-    <ion-radio slot="start" [value]="reference"></ion-radio>
-  </ion-item>
-</ion-radio-group>
-<ion-toolbar>
-  <ion-buttons slot="end">
-    <ion-button (click)="validate()" color=success fill=solid>
-      Valider
-    </ion-button>
-  </ion-buttons>
-</ion-toolbar>
+<form [formGroup]="nidaForm" (ngSubmit)="validate()">
+
+  <ion-radio-group #radioGroup formControlName="ref" required="true" allowEmptySelection="true">
+    <ion-item>
+      <ion-label>Autre :</ion-label>
+      <!-- <ion-radio slot="start"></ion-radio> -->
+      <ion-radio slot="start" [value]="manualInput.value"></ion-radio>
+      <ion-input #manualInput type="text" placeholder="entrée la référence du nida">
+      </ion-input>
+    </ion-item>
+    <ion-item *ngFor="let reference of references$ | async">
+      <ion-label>{{reference}}</ion-label>
+      <ion-radio slot="start" [value]="reference"></ion-radio>
+    </ion-item>
+  </ion-radio-group>
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button type="submit" color=success fill=solid [disabled]="nidaForm.invalid">
+        Valider
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</form>
