--- a/src/app/pages/molding/create-molding/create-molding.page.html
+++ b/src/app/pages/molding/create-molding/create-molding.page.html
@@ -15,9 +15,7 @@
         <mat-panel-title>
           <ion-title color=primary> Liste des Kits</ion-title>
         </mat-panel-title>
-
         <mat-panel-description>
-
         </mat-panel-description>
       </mat-expansion-panel-header>
 
@@ -32,61 +30,15 @@
           <ion-title color=primary>Liste des nidas</ion-title>
         </mat-panel-title>
         <mat-panel-description>
-
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <ion-grid fixed>
-        <ion-row>
-          <ion-col size="6">
-            <ion-label>
-              N° de lot
-            </ion-label>
-          </ion-col>
-          <ion-col size="6">
-            <ion-label>
-              Référence
-            </ion-label>
-          </ion-col>
-        </ion-row>
-        <ion-row *ngFor="let mat of molding.materialSupplementary">
-          <ion-col size="6">
-            <ion-label>
-              {{mat.numLot}}
-            </ion-label>
-          </ion-col>
-          <ion-col size="6">
-            <ion-label>
-              {{mat.ref}}
-            </ion-label>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+
+      <app-molding-materials-table [molding]="molding"></app-molding-materials-table>
+
     </mat-expansion-panel>
   </mat-accordion>
 </ion-content>
-<!-- footer -->
-<!-- <ion-tab-bar slot="bottom" class="ion-hide-md-up">
-  <ion-tab-button tab="schedule">
-    <ion-icon name="link"></ion-icon>
-    <ion-label>Outillage</ion-label>
-    <ion-badge>6</ion-badge>
-  </ion-tab-button>
 
-  <ion-tab-button tab="speakers" (click)="kitAlertPrompt()">
-    <ion-icon name="scan"></ion-icon>
-    <ion-label>Scan kit</ion-label>
-  </ion-tab-button>
-
-  <ion-tab-button tab="map">
-    <ion-icon name="print"></ion-icon>
-    <ion-label>Imprimer</ion-label>
-  </ion-tab-button>
-
-  <ion-tab-button tab="about" (click)="saveMoldingClick()">
-    <ion-icon name="save"></ion-icon>
-    <ion-label>Sauvegarder</ion-label>
-  </ion-tab-button>
-</ion-tab-bar> -->
 <ion-footer class="ion-hide-md-down">
   <ion-toolbar>
     <ion-text slot="start">Outillage :
@@ -115,3 +67,41 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- footer -->
+<!-- <ion-tab-bar slot="bottom" class="ion-hide-md-up">
+  <ion-tab-button tab="schedule">
+    <ion-icon name="link"></ion-icon>
+    <ion-label>Outillage</ion-label>
+    <ion-badge>6</ion-badge>
+  </ion-tab-button>
+
+  <ion-tab-button tab="speakers" (click)="kitAlertPrompt()">
+    <ion-icon name="scan"></ion-icon>
+    <ion-label>Scan kit</ion-label>
+  </ion-tab-button>
+
+  <ion-tab-button tab="map">
+    <ion-icon name="print"></ion-icon>
+    <ion-label>Imprimer</ion-label>
+  </ion-tab-button>
+
+  <ion-tab-button tab="about" (click)="saveMoldingClick()">
+    <ion-icon name="save"></ion-icon>
+    <ion-label>Sauvegarder</ion-label>
+  </ion-tab-button>
+</ion-tab-bar> -->
